# artistic-videos

./: .gitignore  README.md  README.zh.md  pyproject.toml
.github/workflows/: ci.yml
artvid/: __init__.py  cli.py  config.py  device.py
artvid/diffusion/: __init__.py  cross_frame_attention.py  engine.py  latent_warp.py  video.py
artvid/flow/: __init__.py  consistency.py  raft.py  warp.py
artvid/io/: __init__.py  flow_io.py  image.py  video.py
artvid/losses/: __init__.py  content.py  style.py  temporal.py  tv.py
artvid/models/: __init__.py  vgg.py
artvid/optim/: __init__.py  lbfgs.py  runner.py
artvid/pipeline/: __init__.py  multipass.py  singlepass.py  stylize_image.py
docs/: 00-overview.md  01-architecture.md  02-migration-map.md  03-phase1-plan.md  04-phase2-plan.md  05-workflow-plan.md  06-phase1-known-deviations.md  07-phase2-design.md  08-m5max-quickstart.md  08-quickstart.md  09-retrospective.md  README.md  usage.md
examples/: demo_stylize_image.py
legacy/: README.md
scripts/: benchmark.py  demo_stylize_image.py  prefetch_models.py  smoke_test.py
tests/: conftest.py  test_cpu_e2e.py  test_diffusion_structure.py  test_flow_io.py  test_latent_warp.py  test_losses.py  test_multipass.py  test_phase2_deepening.py  test_singlepass.py  test_structure.py  test_warp.py
