[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artvid"
version = "0.1.0"
description = "Artistic video style transfer (PyTorch/MPS modernization of Ruder et al. 2016)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "artistic-videos contributors" }]
keywords = ["style-transfer", "video", "pytorch", "mps", "optical-flow"]

dependencies = [
    # NOTE: On Apple Silicon you must install the Apple Silicon (arm64) build of
    # torch/torchvision that ships the MPS backend. Install from the official
    # PyTorch index, e.g.:
    #   pip install torch torchvision
    # (the default PyPI wheels already include the MPS backend on macOS arm64).
    # These constraints intentionally do not pin a build variant.
    "torch>=2.2",
    "torchvision>=0.17",
    "numpy>=1.26",
    "pillow>=10.0",
    "imageio>=2.31",
    "imageio-ffmpeg>=0.4.9",
    "tyro>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
# Phase 2 diffusion engine (artvid/diffusion/*). These are only needed for
# `--engine diffusion`; Phase 1 (optim) runs on the base deps alone.
#
# Lower bounds below are chosen for SDXL + ControlNet + IP-Adapter support on
# Apple Silicon (MPS):
#   * diffusers>=0.27  — IP-Adapter loading via load_ip_adapter() and the
#     StableDiffusionXLControlNetPipeline both stabilised by this release.
#   * transformers>=4.38 — CLIP image/text encoders required by SDXL and the
#     IP-Adapter image encoder.
#   * accelerate>=0.27 — device_map / low-memory model loading used by diffusers.
#   * safetensors>=0.4 — weight format for SDXL/ControlNet/IP-Adapter checkpoints.
#   * controlnet_aux>=0.0.7 — control-image preprocessors (canny/depth/etc.).
#   * peft>=0.9 — LoRA / adapter plumbing diffusers uses for IP-Adapter weights.
#
# NOTE: these are conservative floors, not validated pins. Confirm exact
# versions on the M5 Max (Metal/MPS) hardware and pin a known-good set there,
# since diffusers/transformers/peft interlock tightly across releases.
diffusion = [
    "diffusers>=0.27",
    "transformers>=4.38",
    "accelerate>=0.27",
    "safetensors>=0.4",
    "controlnet_aux>=0.0.7",
    "peft>=0.9",
]
# Convenience aggregate: everything for development + the diffusion engine.
all = [
    "pytest>=7.4",
    "diffusers>=0.27",
    "transformers>=4.38",
    "accelerate>=0.27",
    "safetensors>=0.4",
    "controlnet_aux>=0.0.7",
    "peft>=0.9",
]

[project.scripts]
artvid = "artvid.cli:main"

[tool.setuptools.packages.find]
include = ["artvid*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
