[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artvid"
version = "0.1.0"
description = "Artistic video style transfer (PyTorch/MPS modernization of Ruder et al. 2016)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "artistic-videos contributors" }]
keywords = ["style-transfer", "video", "pytorch", "mps", "optical-flow"]

dependencies = [
    # NOTE: On Apple Silicon you must install the Apple Silicon (arm64) build of
    # torch/torchvision that ships the MPS backend. Install from the official
    # PyTorch index, e.g.:
    #   pip install torch torchvision
    # (the default PyPI wheels already include the MPS backend on macOS arm64).
    # These constraints intentionally do not pin a build variant.
    "torch>=2.2",
    "torchvision>=0.17",
    "numpy>=1.26",
    "pillow>=10.0",
    "imageio>=2.31",
    "imageio-ffmpeg>=0.4.9",
    "tyro>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]
# Phase 2 diffusion engine (artvid/diffusion/*). These are only needed for
# `--engine diffusion`; Phase 1 (optim) runs on the base deps alone.
#
# Lower bounds below are chosen for SDXL + ControlNet + IP-Adapter support on
# Apple Silicon (MPS):
#   * diffusers>=0.27  — IP-Adapter loading via load_ip_adapter() and the
#     StableDiffusionXLControlNetPipeline both stabilised by this release.
#   * transformers>=4.38 — CLIP image/text encoders required by SDXL and the
#     IP-Adapter image encoder.
#   * accelerate>=0.27 — device_map / low-memory model loading used by diffusers.
#   * safetensors>=0.4 — weight format for SDXL/ControlNet/IP-Adapter checkpoints.
#   * controlnet_aux>=0.0.7 — control-image preprocessors (canny/depth/etc.).
#   * peft>=0.9 — LoRA / adapter plumbing diffusers uses for IP-Adapter weights.
#
# NOTE: these are conservative floors, not validated pins. Confirm exact
# versions on the M5 Max (Metal/MPS) hardware and pin a known-good set there,
# since diffusers/transformers/peft interlock tightly across releases.
diffusion = [
    "diffusers>=0.27",
    "transformers>=4.38",
    "accelerate>=0.27",
    "safetensors>=0.4",
    "controlnet_aux>=0.0.7",
    "peft>=0.9",
]
# Convenience aggregate: everything for development + the diffusion engine.
all = [
    "pytest>=7.4",
    "ruff>=0.4",
    "diffusers>=0.27",
    "transformers>=4.38",
    "accelerate>=0.27",
    "safetensors>=0.4",
    "controlnet_aux>=0.0.7",
    "peft>=0.9",
]

[project.scripts]
artvid = "artvid.cli:main"

[tool.setuptools.packages.find]
include = ["artvid*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Register custom markers so an unfiltered run is warning-clean and CI can
# deselect expensive paths with `-m "not network and not mps"`. These mirror the
# definitions in tests/conftest.py (which also calls config.addinivalue_line for
# environments that load the plugin before this file); declaring them here is the
# canonical registration and silences PytestUnknownMarkWarning.
markers = [
    "network: test downloads model weights or needs network access (deselect on offline CI with -m 'not network').",
    "mps: test requires the Apple-Silicon MPS backend (deselect on non-Mac CI with -m 'not mps').",
    "slow: offline but slower CPU end-to-end test.",
]

[tool.ruff]
# Match the project's minimum supported interpreter.
target-version = "py311"
line-length = 100
# Generated bytecode / build artifacts; ruff already skips most by default.
extend-exclude = ["__pycache__", "build", "dist"]

[tool.ruff.lint]
# Conservative, high-signal rule set:
#   E  — pycodestyle errors (whitespace, syntax-ish style)
#   F  — pyflakes (unused imports/vars, undefined names)
#   I  — isort (import ordering / grouping)
select = ["E", "F", "I"]
# E501 (line-too-long) is intentionally not enforced: several pre-existing help
# strings / comments exceed 100 cols and rewrapping them is out of scope for the
# lint gate. `line-length` above still drives import wrapping and any future
# `ruff format`. Re-enable E501 once those lines are reflowed.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Tests may re-import / shadow fixtures and keep imports next to the code that
# uses them for readability; relax import-placement (E402) and unused-import
# (F401) noise there without weakening the source-tree gate.
"tests/*" = ["E402", "F401"]
"tests/conftest.py" = ["E402", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["artvid"]
